# scriber

./: .gitignore  README.md
extension/: manifest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: pcm-processor.js
extension/src/: background.ts  vite-env.d.ts
extension/src/lib/: helperClient.ts  messages.ts  pcm.ts
extension/src/offscreen/: index.html  offscreen.ts
extension/src/popup/: index.html  popup.css  popup.ts
helper/: README.md  pyproject.toml
helper/scripts/: soak_test.py  start-helper.bat
helper/tab_transcriber_helper/: __init__.py  asr.py  journal.py  note_bridge.py  pcm.py  server.py
note_resolver/: README.md  app.py  pyproject.toml
note_resolver/examples/: sample_transcript.txt
note_resolver/note_resolver/: __init__.py  __main__.py  runner.py  schema.py
note_resolver/note_resolver/config/: fields.json
note_resolver/note_resolver/pipeline/: __init__.py  assembler.py  indexer.py  matcher.py  multi_tag.py  parser.py  radio3.py  rollup.py
