[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tab-transcriber-helper"
version = "0.1.0"
description = "Local faster-whisper WebSocket helper for the Tab Transcriber Chrome extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.0",
  "websockets>=12.0",
  "numpy>=1.26.0",
]

[project.scripts]
tab-transcriber-helper = "tab_transcriber_helper.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tab_transcriber_helper*"]
